feat(INCOME-1961): replace logic for exceeded employees